syntax = "proto3";

                 package cariCagDcshBlVhcl;
service CariCagDcshBlVhclService {
 rpc createCariCagDcshBlVhcl (CariCagDcshBlVhclCreateInput) returns (CariCagDcshBlVhcl) {}
rpc cariCagDcshBlVhcls (findManyParams) returns (stream CariCagDcshBlVhcl) {}
rpc cariCagDcshBlVhcl (CariCagDcshBlVhclWhereUniqueInput) returns (CariCagDcshBlVhcl) {}
rpc updateCariCagDcshBlVhcl (CariCagDcshBlVhclUpdateInput) returns (CariCagDcshBlVhcl) {}
rpc deleteCariCagDcshBlVhcl (CariCagDcshBlVhclWhereUniqueInput) returns (CariCagDcshBlVhcl) {} 
 }
message CariCagDcshBlVhclCreateInput {
string cagMgmtNo = 1;
string chssNo = 2;
string createdAt = 3;
string delYn = 4;
int32 engnClndGcnt = 5;
string frstRegstId = 6;
string frstRgsrDttm = 7;
string id = 8;
string lastChgDttm = 9;
string lastChprId = 10;
string mrn = 11;
string updatedAt = 12;
string vhclKndNm = 13;
string vhclMdlCd = 14;
string vhclMnfcYy = 15;
string vhclMnurCd = 16;
string vhclRgsrNo = 17;
int32 vhclSrno = 18;
int32 vhclTotlWght = 19;
};
message CariCagDcshBlVhcl {
string cagMgmtNo = 1;
string chssNo = 2;
string createdAt = 3;
string delYn = 4;
int32 engnClndGcnt = 5;
string frstRegstId = 6;
string frstRgsrDttm = 7;
string id = 8;
string lastChgDttm = 9;
string lastChprId = 10;
string mrn = 11;
string updatedAt = 12;
string vhclKndNm = 13;
string vhclMdlCd = 14;
string vhclMnfcYy = 15;
string vhclMnurCd = 16;
string vhclRgsrNo = 17;
int32 vhclSrno = 18;
int32 vhclTotlWght = 19;
};
message CariCagDcshBlVhclWhereUniqueInput {
string cagMgmtNo = 1;
string chssNo = 2;
string createdAt = 3;
string delYn = 4;
int32 engnClndGcnt = 5;
string frstRegstId = 6;
string frstRgsrDttm = 7;
string id = 8;
string lastChgDttm = 9;
string lastChprId = 10;
string mrn = 11;
string updatedAt = 12;
string vhclKndNm = 13;
string vhclMdlCd = 14;
string vhclMnfcYy = 15;
string vhclMnurCd = 16;
string vhclRgsrNo = 17;
int32 vhclSrno = 18;
int32 vhclTotlWght = 19;
};
message CariCagDcshBlVhclUpdateInput {
string cagMgmtNo = 1;
string chssNo = 2;
string createdAt = 3;
string delYn = 4;
int32 engnClndGcnt = 5;
string frstRegstId = 6;
string frstRgsrDttm = 7;
string id = 8;
string lastChgDttm = 9;
string lastChprId = 10;
string mrn = 11;
string updatedAt = 12;
string vhclKndNm = 13;
string vhclMdlCd = 14;
string vhclMnfcYy = 15;
string vhclMnurCd = 16;
string vhclRgsrNo = 17;
int32 vhclSrno = 18;
int32 vhclTotlWght = 19;
};
message findManyParams {

};